--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,11 @@
 .externalNativeBuild
 .cxx
 local.properties
+.idea/.name
+.idea/compiler.xml
+.idea/gradle.xml
+.idea/misc.xml
+.idea/vcs.xml
+gradle/wrapper/gradle-wrapper.jar
+gradlew
+gradlew.bat
